--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
             <p class="lead">编写灵活、稳定、高质量、高复用的前端代码的规范。</p>
 
             <p class="masthead-links">
-                <a href="https://indeex.cc">
+                <a href="https://hungking.cc">
                     <span class="icon icon-home"></span>
                 </a>
-                <a href="https://github.com/indeexx">
+                <a href="https://github.com">
                     <span class="icon icon-github-circled"></span>
                 </a>
             </p>
@@ -715,7 +715,7 @@
 
     <footer class="footer">
         <p>由<a href="https://hungking.cc/">indeex</a>整理与制定</p>
-        <p> Copyright 2019 <a href="https://indeex.cc">indeex</a>.</p>
+        <p> Copyright 2019 <a href="https://hungking.cc">indeex</a>.</p>
         <!-- <p>最后更新时间：2019-01-03</p> -->
     </footer>
 </body>
